all code changes plus java 17 upgrade