@@ -1,24 +1,21 @@
 package hci.gnomex.controller;
 
 import hci.framework.control.Command;
-import hci.gnomex.utility.HttpServletWrappedRequest;
-import hci.gnomex.utility.Util;
 import hci.framework.control.RollBackCommandException;
 import hci.gnomex.model.ArrayCoordinate;
 import hci.gnomex.model.SlideDesign;
 import hci.gnomex.model.SlideProduct;
 import hci.gnomex.security.SecurityAdvisor;
 import hci.gnomex.utility.HibernateSession;
+import hci.gnomex.utility.HttpServletWrappedRequest;
+import hci.gnomex.utility.Util;
+import org.apache.log4j.Logger;
+import org.hibernate.Session;
 
+import javax.servlet.http.HttpSession;
 import java.io.Serializable;
 import java.util.Iterator;
 import java.util.List;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
-
-import org.hibernate.Session;
-import org.apache.log4j.Logger;
 
 
 
@@ -43,7 +40,7 @@ public class DeleteSlideDesign extends GNomExCommand implements Serializable {
   public void loadCommand(HttpServletWrappedRequest request, HttpSession session) {
 
    if (request.getParameter("idSlideDesign") != null && !request.getParameter("idSlideDesign").equals("")) {
-     idSlideDesign = new Integer(request.getParameter("idSlideDesign"));
+     idSlideDesign = Integer.valueOf(request.getParameter("idSlideDesign"));
    }
 
   }
@@ -86,7 +83,7 @@ public class DeleteSlideDesign extends GNomExCommand implements Serializable {
             oldSlideProduct.setApplications(null);
             sess.delete(oldSlideProduct);
           } else {
-            oldSlideProduct.setSlidesInSet(new Integer(oldSlideProduct.getSlideDesigns().size()));
+            oldSlideProduct.setSlidesInSet(oldSlideProduct.getSlideDesigns().size());
           }
 
         }
