@@ -34,13 +34,12 @@ import java.math.BigDecimal;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.*;
-
 import static hci.gnomex.constants.Constants.MAX_DESCRIPT_LIMIT;
 
 public class SaveRequest extends GNomExCommand implements Serializable {
 
 	// the static field for logging in Log4J
-	private static Logger LOG = Logger.getLogger(SaveRequest.class);
+	private final static Logger LOG = Logger.getLogger(SaveRequest.class);
 
 	private String requestXMLString;
 	private String requestJSONString;
@@ -406,7 +405,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 							|| laneInfo.getIdSequenceLane().startsWith("SequenceLane");
 
 					if (!isNewLane) {
-						SequenceLane sl = sess.load(SequenceLane.class, new Integer(laneInfo.getIdSequenceLane()));
+						SequenceLane sl = sess.load(SequenceLane.class, Integer.valueOf(laneInfo.getIdSequenceLane()));
 						boolean seqLaneReassignment = isSeqReassignment(sess, laneInfo, idSampleMap);
 
 						if (!seqLaneReassignment) {
@@ -428,7 +427,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					boolean seqLaneReassignment = false;
 					Integer idSampleReal = null;
 					if (!isNewLane) {
-						SequenceLane sl = sess.load(SequenceLane.class, new Integer(laneInfo.getIdSequenceLane()));
+						SequenceLane sl = sess.load(SequenceLane.class, Integer.valueOf(laneInfo.getIdSequenceLane()));
 						if (laneInfo.getIdSampleString() != null && !laneInfo.getIdSampleString().equals("") && !laneInfo.getIdSampleString().equals("0")) {
 							idSampleReal = (Integer) idSampleMap.get(laneInfo.getIdSampleString());
 						}
@@ -491,7 +490,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 	 * Helper function to determine if an existing sequence lane had a new sample reassigned to it
 	 */
 	private static boolean isSeqReassignment(Session sess, RequestParser.SequenceLaneInfo laneInfo, Map idSampleMap) {
-		SequenceLane sl = sess.load(SequenceLane.class, new Integer(laneInfo.getIdSequenceLane()));
+		SequenceLane sl = sess.load(SequenceLane.class, Integer.valueOf(laneInfo.getIdSequenceLane()));
 		Integer idSampleReal = null;
 		if (laneInfo.getIdSampleString() != null && !laneInfo.getIdSampleString().equals("") && !laneInfo.getIdSampleString().equals("0")) {
 			idSampleReal = (Integer) idSampleMap.get(laneInfo.getIdSampleString());
@@ -519,7 +518,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 			sequenceLane.setCreateDate(theTime);
 			isNewSequenceLane = true;
 		} else {
-			sequenceLane = sess.load(SequenceLane.class, new Integer(sequenceLaneInfo.getIdSequenceLane()));
+			sequenceLane = sess.load(SequenceLane.class, Integer.valueOf(sequenceLaneInfo.getIdSequenceLane()));
 		}
 
 		Integer idSampleReal = null;
@@ -810,7 +809,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					for (int j = 0; j < propertiesArray.size(); j++) {
 						String idPropertyEntry = Util.getJsonStringSafe(propertiesArray.getJsonObject(j), "idPropertyEntry");
 						if (idPropertyEntry != null && !idPropertyEntry.equals("")) {
-							if (pe.getIdPropertyEntry().equals(new Integer(idPropertyEntry))) {
+							if (pe.getIdPropertyEntry().equals(Integer.valueOf(idPropertyEntry))) {
 								found = true;
 								break;
 							}
@@ -869,7 +868,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 //							if (valuesArray.getName().equals("PropertyEntryValue")) {
 								String idPropertyEntryValue = Util.getJsonStringSafe(valuesArray.getJsonObject(j), "idPropertyEntryValue");
 								if (idPropertyEntryValue != null && !idPropertyEntryValue.equals("")) {
-									if (av.getIdPropertyEntryValue().equals(new Integer(idPropertyEntryValue))) {
+									if (av.getIdPropertyEntryValue().equals(Integer.valueOf(idPropertyEntryValue))) {
 										found = true;
 										break;
 									}
@@ -1101,6 +1100,9 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 
 	public Command execute() throws GNomExRollbackException {
 
+		long startTime = System.currentTimeMillis();
+		originalRequestNumber = "unknown";
+
 		Session sess = null;
 		String billingAccountMessage = "";
 		String status = null;				// non-null if ccnumbers can't be found in BST
@@ -1178,6 +1180,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 
 					// save request
 					originalRequestNumber = saveRequest(sess, requestParser, description);
+
 					sendNotification(requestParser.getRequest(), sess, requestParser.isNewRequest() ? Notification.NEW_STATE : Notification.EXISTING_STATE,
 							Notification.SOURCE_TYPE_ADMIN, Notification.TYPE_REQUEST);
 					sendNotification(requestParser.getRequest(), sess, requestParser.isNewRequest() ? Notification.NEW_STATE : Notification.EXISTING_STATE,
@@ -1859,6 +1862,8 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 			throw new GNomExRollbackException(e.getMessage(), true, "An error occurred saving the request.");
 		}
 
+		String dinfo = "SaveRequest (" + this.getUsername() + " - " + originalRequestNumber + "), ";
+		Util.showTime(startTime, dinfo);
 		return this;
 	}
 
@@ -2211,7 +2216,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 				// in the order they are listed, so set the well position based on
 				// to sample count which is incremented as we iterate through the
 				// list of samples.
-				realWell.setPosition(new Integer(sampleCountOnPlate));
+				realWell.setPosition(Integer.valueOf(sampleCountOnPlate));
 				sess.save(realWell);
 				sess.flush();
 			} else {
@@ -2233,7 +2238,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					well.setSample(sample);
 					well.setIdRequest(requestParser.getRequest().getIdRequest());
 				}
-				well.setPosition(new Integer(sampleCountOnPlate));
+				well.setPosition(Integer.valueOf(sampleCountOnPlate));
 				sess.save(well);
 			}
 
@@ -2269,7 +2274,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 						assayWell.setIdPlate(assayPlate.getIdPlate());
 						assayWell.setIdSample(sample.getIdSample());
 						assayWell.setPlate(assayPlate);
-						assayWell.setPosition(new Integer(sampleCountOnPlate));
+						assayWell.setPosition(Integer.valueOf(sampleCountOnPlate));
 						assayWell.setCol(parsedWell.getCol());
 						assayWell.setRow(parsedWell.getRow());
 						assayWell.setSample(sample);
@@ -2288,7 +2293,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 								if (well.getAssay() != null && assayName.equals(well.getAssay().getName())) {
 									wellsFound.add(well);
 									well.setCol(parsedWell.getCol());
-									well.setPosition(new Integer(sampleCountOnPlate));
+									well.setPosition(Integer.valueOf(sampleCountOnPlate));
 									well.setRow(parsedWell.getRow());
 									sess.save(well);
 									found = true;
@@ -2315,7 +2320,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 							assayWell.setIdPlate(assayPlate.getIdPlate());
 							assayWell.setIdSample(sample.getIdSample());
 							assayWell.setPlate(assayPlate);
-							assayWell.setPosition(new Integer(sampleCountOnPlate));
+							assayWell.setPosition(Integer.valueOf(sampleCountOnPlate));
 							assayWell.setCol(parsedWell.getCol());
 							assayWell.setRow(parsedWell.getRow());
 							assayWell.setSample(sample);
@@ -2358,7 +2363,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					primerWell.setIdPlate(primerPlate.getIdPlate());
 					primerWell.setIdSample(sample.getIdSample());
 					primerWell.setPlate(primerPlate);
-					primerWell.setPosition(new Integer(sampleCountOnPlate));
+					primerWell.setPosition(Integer.valueOf(sampleCountOnPlate));
 					primerWell.setCol(parsedWell.getCol());
 					primerWell.setRow(parsedWell.getRow());
 					primerWell.setSample(sample);
@@ -2369,10 +2374,10 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 				for (Iterator i = sample.getWells().iterator(); i.hasNext();) {
 					PlateWell well = (PlateWell) i.next();
 					if (well.getPlate().getCodePlateType().equals(PlateType.SOURCE_PLATE_TYPE)) {
-						if (!well.getCol().equals(parsedWell.getCol()) || !well.getPosition().equals(new Integer(sampleCountOnPlate))
+						if (!well.getCol().equals(parsedWell.getCol()) || !well.getPosition().equals(Integer.valueOf(sampleCountOnPlate))
 								|| !well.getRow().equals(parsedWell.getRow())) {
 							well.setCol(parsedWell.getCol());
-							well.setPosition(new Integer(sampleCountOnPlate));
+							well.setPosition(Integer.valueOf(sampleCountOnPlate));
 							well.setRow(parsedWell.getRow());
 							sess.save(well);
 						}
@@ -2410,7 +2415,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					sourceWell.setCreateDate(new java.util.Date(System.currentTimeMillis()));
 					sourceWell.setCol(Integer.parseInt(cherryPickSourceWell.substring(1)));
 					sourceWell.setRow(cherryPickSourceWell.substring(0, 1));
-					sourceWell.setPosition(new Integer(sampleCountOnPlate));
+					sourceWell.setPosition(Integer.valueOf(sampleCountOnPlate));
 					sourceWell.setIdPlate(cherrySourcePlate.getIdPlate());
 					sourceWell.setPlate(cherrySourcePlate);
 					sourceWell.setIdSample(sample.getIdSample());
@@ -2423,7 +2428,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 						if (well.getPlate().getCodePlateType().equals(PlateType.SOURCE_PLATE_TYPE)) {
 							well.setCol(Integer.parseInt(cherryPickSourceWell.substring(1)));
 							well.setRow(cherryPickSourceWell.substring(0, 1));
-							well.setPosition(new Integer(sampleCountOnPlate));
+							well.setPosition(Integer.valueOf(sampleCountOnPlate));
 							well.setIdPlate(cherrySourcePlate.getIdPlate());
 							well.setPlate(cherrySourcePlate);
 							sess.save(well);
@@ -2454,7 +2459,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					destinationWell.setCreateDate(new java.util.Date(System.currentTimeMillis()));
 					destinationWell.setCol(Integer.parseInt(cherryPickDestinationWell.substring(1)));
 					destinationWell.setRow(cherryPickDestinationWell.substring(0, 1));
-					destinationWell.setPosition(new Integer(sampleCountOnPlate));
+					destinationWell.setPosition(Integer.valueOf(sampleCountOnPlate));
 					destinationWell.setCodeReactionType(ReactionType.CHERRY_PICKING_REACTION_TYPE);
 					destinationWell.setIdPlate(cherryPickDestinationPlate.getIdPlate());
 					destinationWell.setPlate(cherryPickDestinationPlate);
@@ -2468,7 +2473,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 						if (well.getPlate().getCodePlateType().equals(PlateType.REACTION_PLATE_TYPE)) {
 							well.setCol(Integer.parseInt(cherryPickDestinationWell.substring(1)));
 							well.setRow(cherryPickDestinationWell.substring(0, 1));
-							well.setPosition(new Integer(sampleCountOnPlate));
+							well.setPosition(Integer.valueOf(sampleCountOnPlate));
 							sess.save(well);
 							break;
 						}
@@ -2519,7 +2524,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 				// in the order they are listed, so set the well position based on
 				// to sample count which is incremented as we iterate through the
 				// list of samples.
-				realWell.setPosition(new Integer(sampleCountOnPlate));
+				realWell.setPosition(Integer.valueOf(sampleCountOnPlate));
 				sess.save(realWell);
 				sess.flush();
 			} else {
@@ -2541,7 +2546,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					well.setSample(sample);
 					well.setIdRequest(requestParser.getRequest().getIdRequest());
 				}
-				well.setPosition(new Integer(sampleCountOnPlate));
+				well.setPosition(Integer.valueOf(sampleCountOnPlate));
 				sess.save(well);
 			}
 
@@ -2616,7 +2621,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 			hyb.setIdFeatureExtractionProtocol(idFeatureExtractionProtocolDefault);
 			isNewHyb = true;
 		} else {
-			hyb = sess.load(Hybridization.class, new Integer(hybInfo.getIdHybridization()));
+			hyb = sess.load(Hybridization.class, Integer.valueOf(hybInfo.getIdHybridization()));
 		}
 
 		Integer idSampleChannel1Real = null;
@@ -2639,7 +2644,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 				labeledSampleChannel1.setIdLabel((Integer) labelMap.get("Cy3"));
 				labeledSampleChannel1.setIdRequest(requestParser.getRequest().getIdRequest());
 				labeledSampleChannel1.setCodeLabelingReactionSize(LabelingReactionSize.STANDARD);
-				labeledSampleChannel1.setNumberOfReactions(new Integer(1));
+				labeledSampleChannel1.setNumberOfReactions(Integer.valueOf("1"));
 				labeledSampleChannel1.setIdLabelingProtocol(idLabelingProtocolDefault);
 				sess.save(labeledSampleChannel1);
 
@@ -2661,7 +2666,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 					labeledSampleChannel2.setIdLabel((Integer) labelMap.get("Cy5"));
 					labeledSampleChannel2.setIdRequest(requestParser.getRequest().getIdRequest());
 					labeledSampleChannel2.setCodeLabelingReactionSize(LabelingReactionSize.STANDARD);
-					labeledSampleChannel2.setNumberOfReactions(new Integer(1));
+					labeledSampleChannel2.setNumberOfReactions(Integer.valueOf("1"));
 					labeledSampleChannel2.setIdLabelingProtocol(idLabelingProtocolDefault);
 
 					sess.save(labeledSampleChannel2);
@@ -2700,7 +2705,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 						labeledSampleChannel1.setIdLabel((Integer) labelMap.get("Cy3"));
 						labeledSampleChannel1.setIdRequest(requestParser.getRequest().getIdRequest());
 						labeledSampleChannel1.setCodeLabelingReactionSize(LabelingReactionSize.STANDARD);
-						labeledSampleChannel1.setNumberOfReactions(new Integer(1));
+						labeledSampleChannel1.setNumberOfReactions(Integer.valueOf("1"));
 						labeledSampleChannel1.setIdLabelingProtocol(idLabelingProtocolDefault);
 
 						sess.save(labeledSampleChannel1);
@@ -2765,7 +2770,7 @@ public class SaveRequest extends GNomExCommand implements Serializable {
 						labeledSampleChannel2.setIdLabel((Integer) labelMap.get("Cy5"));
 						labeledSampleChannel2.setIdRequest(requestParser.getRequest().getIdRequest());
 						labeledSampleChannel2.setCodeLabelingReactionSize(LabelingReactionSize.STANDARD);
-						labeledSampleChannel2.setNumberOfReactions(new Integer(1));
+						labeledSampleChannel2.setNumberOfReactions(Integer.valueOf("1"));
 						labeledSampleChannel2.setIdLabelingProtocol(idLabelingProtocolDefault);
 
 						sess.save(labeledSampleChannel2);
